[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikiverse"
version = "0.1.0"
description = "A small Python library for searching Wikipedia pages and extracting summaries and hyperlinks."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

authors = [
  { name = "Eduardo Marcelino" }
]

dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0"
]

keywords = [
  "wikipedia",
  "search",
  "links",
  "scraping",
  "reinforcement-learning",
  "graphs",
  "wikiverse",
  "wiki-speedrun",
  "wikiverse-graph",
  "wikiverse-rl"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
  "build>=1.2.0",
  "twine>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["wikiverse*"]